Send controller input over data channel

--- a/WebControlCenter/index.html
+++ b/WebControlCenter/index.html
@@ -13,6 +13,7 @@
   <p>Gamepad status: <span id='gamepadStatus'>Awaiting connection (press a button)</span></p>
   <p>Signaling server: <span id='signalingStatus'>Connecting...</span></p>
   <p>WebRTC connection: <span id='webrtcStatus'>Waiting...</span></p>
+  <p>Data channel status: <span id='dataStatus'>Waiting...</span></p>
   <div class="layout">
       <video id="remoteVideo" autoplay controls playsinline muted></video>
       <!-- Gamepad -->
